--- a/analyses/notebooks/gcam_usa_analysis.ipynb
+++ b/analyses/notebooks/gcam_usa_analysis.ipynb
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "a330d0c1-a657-4365-bf77-0bb8ea4c58c7",
    "metadata": {},
    "outputs": [],
@@ -292,8 +292,7 @@
     "states = gcam_df['state'].unique()\n",
     "\n",
     "# Loop over the states and make the plot for each state:\n",
-    "#for i in range(len(states)):\n",
-    "for i in range(5):    \n",
+    "for i in range(len(states)): \n",
     "    plot_load_time_series(gcam_df = gcam_df,\n",
     "                          state = states[i], \n",
     "                          image_output_dir = image_output_dir, \n",
