Updated run script

--- a/analyses/notebooks/gcam_usa_analysis.ipynb
+++ b/analyses/notebooks/gcam_usa_analysis.ipynb
@@ -221,6 +221,468 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 27,
+   "id": "d1269a66-8542-4700-a551-1d1163034be3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>scenario</th>\n",
+       "      <th>state</th>\n",
+       "      <th>year</th>\n",
+       "      <th>load_TWh</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>55839</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>AK</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>21.079586</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56149</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>AL</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>141.621821</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56567</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>AR</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>74.925947</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>56921</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>AZ</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>165.513063</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57231</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>CA</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>549.622876</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58147</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>CO</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>112.139372</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58457</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>CT</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>52.029245</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>58767</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>DC</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>19.004087</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59077</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>DE</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>18.780409</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59387</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>FL</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>465.344699</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>59827</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>GA</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>227.408916</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60333</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>HI</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>19.201445</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60643</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>IA</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>73.738711</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>60953</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>ID</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>45.924337</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61263</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>IL</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>220.060096</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61573</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>IN</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>165.828142</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>61883</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>KS</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>67.326902</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62193</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>KY</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>122.548915</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62503</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>LA</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>137.440513</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62857</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>MA</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>103.268946</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>63167</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>MD</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>100.357915</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>63477</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>ME</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>21.472114</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>63809</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>MI</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>165.923991</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64337</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>MN</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>106.259614</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64647</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>MO</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>133.654688</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>64957</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>MS</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>76.408720</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65267</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>MT</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>24.582796</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65577</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>NC</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>222.476610</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>65887</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>ND</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>25.031342</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66197</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>NE</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>47.431254</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>66767</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>NH</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>20.328787</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67077</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>NJ</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>133.220429</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67387</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>NM</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>40.616188</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>67805</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>NV</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>75.681261</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68115</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>269.687605</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68425</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>OH</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>240.518504</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>68779</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>OK</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>106.818049</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69089</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>OR</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>83.768729</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69399</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>PA</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>229.656325</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>69753</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>RI</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>14.045800</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70107</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>SC</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>136.577420</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>70417</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>SD</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>19.194123</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71161</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>TN</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>170.494662</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>71471</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>TX</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>732.363134</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72026</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>UT</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>61.510172</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72336</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>VA</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>180.350943</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72646</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>VT</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>9.435771</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>72956</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>WA</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>169.826465</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73266</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>WI</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>109.492415</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73576</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>WV</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>42.548058</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>73886</th>\n",
+       "      <td>rcp85hotter_ssp5</td>\n",
+       "      <td>WY</td>\n",
+       "      <td>2055</td>\n",
+       "      <td>26.910061</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               scenario state  year    load_TWh\n",
+       "55839  rcp85hotter_ssp5    AK  2055   21.079586\n",
+       "56149  rcp85hotter_ssp5    AL  2055  141.621821\n",
+       "56567  rcp85hotter_ssp5    AR  2055   74.925947\n",
+       "56921  rcp85hotter_ssp5    AZ  2055  165.513063\n",
+       "57231  rcp85hotter_ssp5    CA  2055  549.622876\n",
+       "58147  rcp85hotter_ssp5    CO  2055  112.139372\n",
+       "58457  rcp85hotter_ssp5    CT  2055   52.029245\n",
+       "58767  rcp85hotter_ssp5    DC  2055   19.004087\n",
+       "59077  rcp85hotter_ssp5    DE  2055   18.780409\n",
+       "59387  rcp85hotter_ssp5    FL  2055  465.344699\n",
+       "59827  rcp85hotter_ssp5    GA  2055  227.408916\n",
+       "60333  rcp85hotter_ssp5    HI  2055   19.201445\n",
+       "60643  rcp85hotter_ssp5    IA  2055   73.738711\n",
+       "60953  rcp85hotter_ssp5    ID  2055   45.924337\n",
+       "61263  rcp85hotter_ssp5    IL  2055  220.060096\n",
+       "61573  rcp85hotter_ssp5    IN  2055  165.828142\n",
+       "61883  rcp85hotter_ssp5    KS  2055   67.326902\n",
+       "62193  rcp85hotter_ssp5    KY  2055  122.548915\n",
+       "62503  rcp85hotter_ssp5    LA  2055  137.440513\n",
+       "62857  rcp85hotter_ssp5    MA  2055  103.268946\n",
+       "63167  rcp85hotter_ssp5    MD  2055  100.357915\n",
+       "63477  rcp85hotter_ssp5    ME  2055   21.472114\n",
+       "63809  rcp85hotter_ssp5    MI  2055  165.923991\n",
+       "64337  rcp85hotter_ssp5    MN  2055  106.259614\n",
+       "64647  rcp85hotter_ssp5    MO  2055  133.654688\n",
+       "64957  rcp85hotter_ssp5    MS  2055   76.408720\n",
+       "65267  rcp85hotter_ssp5    MT  2055   24.582796\n",
+       "65577  rcp85hotter_ssp5    NC  2055  222.476610\n",
+       "65887  rcp85hotter_ssp5    ND  2055   25.031342\n",
+       "66197  rcp85hotter_ssp5    NE  2055   47.431254\n",
+       "66767  rcp85hotter_ssp5    NH  2055   20.328787\n",
+       "67077  rcp85hotter_ssp5    NJ  2055  133.220429\n",
+       "67387  rcp85hotter_ssp5    NM  2055   40.616188\n",
+       "67805  rcp85hotter_ssp5    NV  2055   75.681261\n",
+       "68115  rcp85hotter_ssp5    NY  2055  269.687605\n",
+       "68425  rcp85hotter_ssp5    OH  2055  240.518504\n",
+       "68779  rcp85hotter_ssp5    OK  2055  106.818049\n",
+       "69089  rcp85hotter_ssp5    OR  2055   83.768729\n",
+       "69399  rcp85hotter_ssp5    PA  2055  229.656325\n",
+       "69753  rcp85hotter_ssp5    RI  2055   14.045800\n",
+       "70107  rcp85hotter_ssp5    SC  2055  136.577420\n",
+       "70417  rcp85hotter_ssp5    SD  2055   19.194123\n",
+       "71161  rcp85hotter_ssp5    TN  2055  170.494662\n",
+       "71471  rcp85hotter_ssp5    TX  2055  732.363134\n",
+       "72026  rcp85hotter_ssp5    UT  2055   61.510172\n",
+       "72336  rcp85hotter_ssp5    VA  2055  180.350943\n",
+       "72646  rcp85hotter_ssp5    VT  2055    9.435771\n",
+       "72956  rcp85hotter_ssp5    WA  2055  169.826465\n",
+       "73266  rcp85hotter_ssp5    WI  2055  109.492415\n",
+       "73576  rcp85hotter_ssp5    WV  2055   42.548058\n",
+       "73886  rcp85hotter_ssp5    WY  2055   26.910061"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Subset to the time series for each scenario:\n",
+    "a = gcam_df[gcam_df['scenario'].isin(['rcp85hotter_ssp5'])]\n",
+    "a = a.loc[a['year'] == 2055]\n",
+    "a\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 20,
    "id": "56abe13f-ec5f-4ee2-919c-e53a3037239a",
    "metadata": {},
