--- a/analyses/notebooks/tell_runs_exp_group_b.ipynb
+++ b/analyses/notebooks/tell_runs_exp_group_b.ipynb
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "76a6b851-29c9-4a1b-a149-ee341f1af5cd",
    "metadata": {
     "pycharm": {
@@ -94,10 +94,10 @@
     "# Generate a list of BA abbreviations to process:\n",
     "ba_abbrev_list = tell.get_balancing_authority_to_model_dict().keys()\n",
     "\n",
-    "scenario_to_process = 'rcp45cooler_ssp3'\n",
+    "scenario_to_process = 'rcp85hotter_ssp5'\n",
     "\n",
     "# Run the MLP prediction step for the list of BAs using parallel processing streams:\n",
-    "for year_to_process in range(2055,2061,1):\n",
+    "for year_to_process in range(2080,2100,1):\n",
     "    pdf = tell.predict_batch(target_region_list = ba_abbrev_list,\n",
     "                             year = year_to_process,\n",
     "                             data_dir = os.path.join(tell_data_dir, r'wrf_to_tell_data', scenario_to_process),\n",
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 4,
    "id": "04afab9a",
    "metadata": {
     "pycharm": {
@@ -133,18 +133,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Start time =  2022-11-14 15:39:53.651274\n",
-      "End time =  2022-11-14 15:41:57.109417\n",
-      "Elapsed time =  0:02:03.458355\n"
+      "Start time =  2022-11-15 16:29:25.938353\n",
+      "End time =  2022-11-15 16:31:32.956695\n",
+      "Elapsed time =  0:02:07.019293\n",
+      "Start time =  2022-11-15 16:31:33.595461\n",
+      "End time =  2022-11-15 16:33:37.918767\n",
+      "Elapsed time =  0:02:04.323479\n",
+      "Start time =  2022-11-15 16:33:38.468043\n",
+      "End time =  2022-11-15 16:35:44.647665\n",
+      "Elapsed time =  0:02:06.180563\n",
+      "Start time =  2022-11-15 16:35:45.470753\n",
+      "End time =  2022-11-15 16:37:52.551080\n",
+      "Elapsed time =  0:02:07.080536\n",
+      "Start time =  2022-11-15 16:37:53.146388\n",
+      "End time =  2022-11-15 16:40:02.083133\n",
+      "Elapsed time =  0:02:08.936958\n",
+      "Start time =  2022-11-15 16:40:03.056885\n",
+      "End time =  2022-11-15 16:42:07.513799\n",
+      "Elapsed time =  0:02:04.459775\n",
+      "Start time =  2022-11-15 16:42:08.086262\n",
+      "End time =  2022-11-15 16:44:14.020296\n",
+      "Elapsed time =  0:02:05.934211\n",
+      "Start time =  2022-11-15 16:44:14.926934\n",
+      "End time =  2022-11-15 16:46:20.034470\n",
+      "Elapsed time =  0:02:05.108524\n"
      ]
     }
    ],
    "source": [
     "# Run the TELL model forward in time for a given year in five year increments out to 2100:\n",
-    "for year in range(2055,2056,1):\n",
+    "for year in range(2020,2060,5):\n",
     "    summary_df, ba_time_series_df, state_time_series_df = tell.execute_forward(year_to_process = str(year),\n",
-    "                                                                               gcam_target_year = '2055', \n",
-    "                                                                               scenario_to_process = 'rcp45cooler_ssp3',\n",
+    "                                                                               gcam_target_year = str(year), \n",
+    "                                                                               scenario_to_process = 'rcp85hotter_ssp5',\n",
     "                                                                               data_output_dir = '/Users/burl878/Documents/Research/IMMM/Data/TELL/Production_Runs/tell_data/outputs/tell_output',\n",
     "                                                                               gcam_usa_input_dir = '/Users/burl878/Documents/Research/IMMM/Data/TELL/Production_Runs/tell_data/gcamusa_data',\n",
     "                                                                               map_input_dir = '/Users/burl878/Documents/Research/IMMM/Data/TELL/Production_Runs/tell_data/ba_service_territory_data',\n",
