--- a/analyses/notebooks/ldc_variability_analysis.ipynb
+++ b/analyses/notebooks/ldc_variability_analysis.ipynb
@@ -2,27 +2,20 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9e071b84",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "id": "a02e3857-7581-45f7-9778-f74328b4e309",
+   "metadata": {},
    "source": [
-    "# TELL Runs for IM3's Experiment Group B \n",
+    "# Analysis of Peak Load Interannual Variability\n",
     "\n",
-    "This notebook executes the initial set of runs of the TELL model for IM3's Experiment Group B."
+    "This notebook studies the interannual variability of peak loads by visualizing changes in the far left side of the \n",
+    "load duration curve."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "86db683a-70a2-4f89-a1d6-4c6d5f180272",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "execution_count": null,
+   "id": "a158a7b1-f4d6-4215-a8aa-1545aa78a9e3",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Start by importing the TELL package and information about your operating system:\n",
@@ -33,30 +26,22 @@
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "\n",
-    "from tell.package_data import get_ba_abbreviations\n"
+    "from tell.package_data import get_ba_abbreviations"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "566fce96-4576-4a2d-9db6-4d0be72b3c1d",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "id": "4ff3a184-35f4-4b71-b120-d8ad4e42008c",
+   "metadata": {},
    "source": [
     "## Set the Directory Structure"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "f7cc0f66-ba83-47d4-b161-0b1ad076064c",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "execution_count": null,
+   "id": "50564f42-6ef3-49ef-9554-a187dd47bfb7",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Identify the top-level directory and the subdirectory where the data will be stored:\n",
@@ -65,136 +50,22 @@
     "\n",
     "# If the \"tell_data_dir\" subdirectory doesn't exist then create it:\n",
     "if not os.path.exists(tell_data_dir):\n",
-    "   os.makedirs(tell_data_dir)\n"
+    "   os.makedirs(tell_data_dir)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4a037554",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
+   "id": "172511f2-47a0-47be-9faa-57412d75c532",
+   "metadata": {},
    "source": [
-    "## Run the MLP Models"
+    "## Do the Analysis"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "76a6b851-29c9-4a1b-a149-ee341f1af5cd",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Generate a list of BA abbreviations to process:\n",
-    "ba_abbrev_list = tell.get_balancing_authority_to_model_dict().keys()\n",
-    "\n",
-    "scenario_to_process = 'rcp85hotter_ssp5'\n",
-    "\n",
-    "# Run the MLP prediction step for the list of BAs using parallel processing streams:\n",
-    "for year_to_process in range(2080,2100,1):\n",
-    "    pdf = tell.predict_batch(target_region_list = ba_abbrev_list,\n",
-    "                             year = year_to_process,\n",
-    "                             data_dir = os.path.join(tell_data_dir, r'wrf_to_tell_data', scenario_to_process),\n",
-    "                             datetime_field_name = 'Time_UTC',\n",
-    "                             save_prediction = True,\n",
-    "                             prediction_output_directory = os.path.join(tell_data_dir, r'outputs', r'mlp_output', scenario_to_process),\n",
-    "                             n_jobs = -1)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f9048639",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
-    "## Run the Forward Execution"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "04afab9a",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Start time =  2022-11-15 16:29:25.938353\n",
-      "End time =  2022-11-15 16:31:32.956695\n",
-      "Elapsed time =  0:02:07.019293\n",
-      "Start time =  2022-11-15 16:31:33.595461\n",
-      "End time =  2022-11-15 16:33:37.918767\n",
-      "Elapsed time =  0:02:04.323479\n",
-      "Start time =  2022-11-15 16:33:38.468043\n",
-      "End time =  2022-11-15 16:35:44.647665\n",
-      "Elapsed time =  0:02:06.180563\n",
-      "Start time =  2022-11-15 16:35:45.470753\n",
-      "End time =  2022-11-15 16:37:52.551080\n",
-      "Elapsed time =  0:02:07.080536\n",
-      "Start time =  2022-11-15 16:37:53.146388\n",
-      "End time =  2022-11-15 16:40:02.083133\n",
-      "Elapsed time =  0:02:08.936958\n",
-      "Start time =  2022-11-15 16:40:03.056885\n",
-      "End time =  2022-11-15 16:42:07.513799\n",
-      "Elapsed time =  0:02:04.459775\n",
-      "Start time =  2022-11-15 16:42:08.086262\n",
-      "End time =  2022-11-15 16:44:14.020296\n",
-      "Elapsed time =  0:02:05.934211\n",
-      "Start time =  2022-11-15 16:44:14.926934\n",
-      "End time =  2022-11-15 16:46:20.034470\n",
-      "Elapsed time =  0:02:05.108524\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Run the TELL model forward in time for a given year in five year increments out to 2100:\n",
-    "for year in range(2020,2060,5):\n",
-    "    summary_df, ba_time_series_df, state_time_series_df = tell.execute_forward(year_to_process = str(year),\n",
-    "                                                                               gcam_target_year = str(year), \n",
-    "                                                                               scenario_to_process = 'rcp85hotter_ssp5',\n",
-    "                                                                               data_output_dir = '/Users/burl878/Documents/Research/IMMM/Data/TELL/Production_Runs/tell_data/outputs/tell_output',\n",
-    "                                                                               gcam_usa_input_dir = '/Users/burl878/Documents/Research/IMMM/Data/TELL/Production_Runs/tell_data/gcamusa_data',\n",
-    "                                                                               map_input_dir = '/Users/burl878/Documents/Research/IMMM/Data/TELL/Production_Runs/tell_data/ba_service_territory_data',\n",
-    "                                                                               mlp_input_dir = '/Users/burl878/Documents/Research/IMMM/Data/TELL/Production_Runs/tell_data/outputs/mlp_output',\n",
-    "                                                                               pop_input_dir = '/Users/burl878/Documents/Research/IMMM/Data/TELL/Production_Runs/tell_data/population_data',\n",
-    "                                                                               save_county_data = False)\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f47db5ee-9da6-4368-82fb-75820c55fe28",
-   "metadata": {
-    "pycharm": {
-     "name": "#%% md\n"
-    }
-   },
-   "source": [
-    "## Visualize the Output"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "79cc3caf-cb82-4d99-898c-e735013efb63",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "id": "8b7e378a-92d5-4a97-9692-7b1c831e348d",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Define a function to plot the interannual variability for a given BA or state:\n",
@@ -347,12 +218,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3175a3e4-9ffb-4439-bcdd-42c6220f50be",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "id": "5e6e9976-10f8-4cae-9cfe-ad34f9990b4f",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Get a list of BAs to process:\n",
@@ -369,18 +236,14 @@
     "                                         image_output_dir = '/Users/burl878/Documents/code_repos/tell/tell/production_visualizations', \n",
     "                                         image_resolution = 125, \n",
     "                                         save_images = True)\n",
-    "    plt.close()\n"
+    "    plt.close()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "15aac3bf-6f36-4cf0-92ba-043c0f399445",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "id": "ede4999d-88b3-4cb1-b3ad-7cbb1e54fadc",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Get a list of states to process:\n",
@@ -402,12 +265,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6cfc0781-a4e2-45c3-bb76-58134a6281e4",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
+   "id": "212c89ee-f00c-4432-b614-f6d53c1ac592",
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Define a function to process the mean deviation for peak loads across BAs or states:\n",
@@ -590,145 +449,6 @@
     "    return stats_df\n",
     "           "
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "928f228f-b338-464c-87e4-b42f90fd8421",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "ba_stats_df = process_peak_load_variability(process_bas = True,\n",
-    "                                            top_x_hours = 168, \n",
-    "                                            scenario_to_process = 'rcp85hotter_ssp5', \n",
-    "                                            data_input_dir = tell_data_dir)\n",
-    "\n",
-    "ba_stats_df\n",
-    "\n",
-    "states_stats_df = process_peak_load_variability(process_bas = False,\n",
-    "                                                top_x_hours = 168, \n",
-    "                                                scenario_to_process = 'rcp85hotter_ssp5', \n",
-    "                                                data_input_dir = tell_data_dir)\n",
-    "\n",
-    "states_stats_df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3e031fee-1e86-4c90-9319-c978ec868662",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# Define a function to plot the mean deviation for peak loads across BAs or states:\n",
-    "def plot_peak_load_variability(plot_bas, top_x_hours: int, scenario_to_plot: str, data_input_dir: str, image_output_dir: str, image_resolution: int, save_images=False):\n",
-    "    \"\"\"Plot the interannual variability of mean deviation for peak loads across BAs or states:\n",
-    "\n",
-    "    :param plot_bas:            Set to True if you want to plot the output for BAs\n",
-    "    :type plot_bas:             bool\n",
-    "\n",
-    "    :param top_x_hours:         Number of peak hours to be included in the analysis\n",
-    "    :type top_x_hours:          int\n",
-    "\n",
-    "    :param scenario_to_plot:    Scenario you want to plot\n",
-    "    :type scenario_to_plot:     str\n",
-    "\n",
-    "    :param data_input_dir:      Top-level data directory for TELL\n",
-    "    :type data_input_dir:       str\n",
-    "\n",
-    "    :param image_output_dir:    Directory to store the images\n",
-    "    :type image_output_dir:     str\n",
-    "\n",
-    "    :param image_resolution:    Resolution at which you want to save the images in DPI\n",
-    "    :type image_resolution:     int\n",
-    "\n",
-    "    :param save_images:         Set to True if you want to save the images after they're generated\n",
-    "    :type save_images:          bool\n",
-    "\n",
-    "    \"\"\"\n",
-    "\n",
-    "    # Set the data input directory:\n",
-    "    tell_data_input_dir = os.path.join(data_input_dir, r'outputs', r'postprocessed', scenario_to_plot)\n",
-    "\n",
-    "    # Set the image output directory:\n",
-    "    image_dir = os.path.join(image_output_dir, scenario_to_plot)\n",
-    "\n",
-    "    # If the output directory doesn't exist then create it:\n",
-    "    if not os.path.exists(image_dir):\n",
-    "        os.makedirs(image_dir)\n",
-    "    \n",
-    "    # Read in the output file created by the \"process_peak_load_variability\" function:\n",
-    "    if plot_bas:\n",
-    "       df = pd.read_csv(tell_data_input_dir + '/BA_Peak_Load_Variability_Top_' + str(top_x_hours) + '_Hours.csv')\n",
-    "    if plot_bas == False:\n",
-    "       df = pd.read_csv(tell_data_input_dir + '/State_Peak_Load_Variability_Top_' + str(top_x_hours) + '_Hours.csv')\n",
-    "    \n",
-    "    # Make the plot:\n",
-    "    fig, axes = plt.subplots(2,1,figsize=(25, 10), sharex=True, sharey=False)\n",
-    "    a = df.boxplot(column=['Absolute_Load_Difference_MWh'], by=['Year'], ax=axes.flatten()[0])\n",
-    "    if plot_bas:\n",
-    "       a.set_title(('Load Difference Across Balancing Authorities For Top ' + str(top_x_hours) + ' Hours: ' + scenario_to_plot))\n",
-    "    if plot_bas == False:\n",
-    "       a.set_title(('Load Difference Across States For Top ' + str(top_x_hours) + ' Hours: ' + scenario_to_plot))\n",
-    "    a.set_xlabel('Year')\n",
-    "    a.set_ylabel('Mean Absolute Load Difference [MWh]')\n",
-    "    \n",
-    "    b = df.boxplot(column=['Relative_Load_Difference_%'], by=['Year'], ax=axes.flatten()[1])\n",
-    "    if plot_bas:\n",
-    "       b.set_title(('Relative Load Difference Across Balancing Authorities For Top ' + str(top_x_hours) + ' Hours: ' + scenario_to_plot))\n",
-    "    if plot_bas == False:\n",
-    "       b.set_title(('Relative Load Difference Across States For Top ' + str(top_x_hours) + ' Hours: ' + scenario_to_plot))\n",
-    "    b.set_xlabel('Year')\n",
-    "    b.set_ylabel('Mean Relative Load Difference [%]')\n",
-    "    \n",
-    "    # If the \"save_images\" flag is set to true then save the plot to a .png file:\n",
-    "    if save_images == True:\n",
-    "        if plot_bas:\n",
-    "           filename = ('Peak_Load_Variability_BAs_Top_' + str(top_x_hours) + '_' + scenario_to_plot + '.png')\n",
-    "        if plot_bas == False:\n",
-    "           filename = ('Peak_Load_Variability_States_Top_' + str(top_x_hours) + '_' + scenario_to_plot + '.png')\n",
-    "        plt.savefig(os.path.join(image_dir, filename), dpi=image_resolution, bbox_inches='tight', facecolor='white')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "802be3a7-4849-4495-b27c-56939eca0877",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "plot_peak_load_variability(plot_bas = True,\n",
-    "                           top_x_hours = 168, \n",
-    "                           scenario_to_plot = 'rcp85hotter_ssp5', \n",
-    "                           data_input_dir = tell_data_dir,\n",
-    "                           image_output_dir = '/Users/burl878/Documents/code_repos/tell/tell/production_visualizations', \n",
-    "                           image_resolution = 125, \n",
-    "                           save_images = True)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "6c71a62a-7fba-4209-9d66-083ca0073534",
-   "metadata": {
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   },
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
