Added new divergence analysis

--- a/analyses/notebooks/div_forecast_bias_analysis.ipynb
+++ b/analyses/notebooks/div_forecast_bias_analysis.ipynb
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 47,
    "id": "4b04f656-5fab-4fcb-86db-63c64db9c2c0",
    "metadata": {},
    "outputs": [
@@ -75,8 +75,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mean = -0.02\n",
-      "Standard Deviation = 8.69\n"
+      "Mean = -0.02%\n",
+      "Standard Deviation = 8.69%\n"
      ]
     },
     {
@@ -206,7 +206,7 @@
        "[1802149 rows x 4 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,8 +260,8 @@
     "# Calculate the mean and standard deviation of the bias time series:\n",
     "bias_mean = output_df['Relative_Bias_%'].mean()\n",
     "bias_std = output_df['Relative_Bias_%'].std()\n",
-    "print(('Mean = ' + str(bias_mean.round(2)) + ))\n",
-    "print(('Standard Deviation = ' + str(bias_std.round(2))))\n",
+    "print(('Mean = ' + str(bias_mean.round(2)) + '%'))\n",
+    "print(('Standard Deviation = ' + str(bias_std.round(2)) + '%'))\n",
     "\n",
     "# Return the output as a dataframe:\n",
     "output_df\n"
