--- a/analyses/notebooks/process_state_time_series.ipynb
+++ b/analyses/notebooks/process_state_time_series.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 1,
    "id": "27e597e9-538f-41d4-afa9-a268b10ab1df",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "bd887600-32da-46dc-b411-fa63c75f564f",
    "metadata": {
     "pycharm": {
@@ -46,7 +46,7 @@
    "outputs": [],
    "source": [
     "# Identify the data input and output directories:\n",
-    "data_input_dir =  '/Volumes/LaCie/Big_Data/wrf_to_tell/wrf_tell_counties_output/historic/'\n",
+    "data_input_dir =  '/Users/burl878/Documents/IMMM/Data/TELL/Temporary/'\n",
     "metadata_input_dir = '/Users/burl878/Documents/IMMM/Data/TELL_Input_Data/forward_execution/Population_Forcing/'\n",
     "data_output_dir =  '/Users/burl878/Documents/IMMM/Data/TELL/State_Meteorology_Time_Series/historic/'\n"
    ]
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "id": "947b41c7-c488-4716-99d1-c98f4a91b5b9",
    "metadata": {},
    "outputs": [
@@ -192,7 +192,7 @@
        "[3142 rows x 4 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 43,
    "id": "4b04f656-5fab-4fcb-86db-63c64db9c2c0",
    "metadata": {},
    "outputs": [],
@@ -238,20 +238,16 @@
     "# Define a function to process the state-level time series for a given year\n",
     "def process_state_meteorology_time_series(data_input_dir: str, data_output_dir: str, year: int):\n",
     "    \n",
-    "    # Initiate a counter and empty output dataframe to store the results:\n",
-    "    counter = 0\n",
-    "    output_df = pd.DataFrame()\n",
-    "    \n",
     "    # Create a list of all county meteorology files in the input directory:\n",
     "    list_of_files = glob(os.path.join(data_input_dir, str(year), '*.csv'))\n",
     "    \n",
     "    # Loop over that list process each file:\n",
     "    for file in range(len(list_of_files)):\n",
-    "        # Extract the file name from the list:\n",
+    "        # Extract the filename from the list:\n",
     "        filename = list_of_files[file].rsplit('/', 1)[1]\n",
     "       \n",
     "        # Extract the time string from the name of the file:\n",
-    "        file_time = filename.replace(\"_UTC_County_Mean_Meteorology.csv\", \"\")\n",
+    "        filetime = filename.replace(\"_UTC_County_Mean_Meteorology.csv\", \"\")\n",
     "                \n",
     "        # Read in the .csv file:\n",
     "        met_df = pd.read_csv(list_of_files[file])\n",
@@ -259,35 +255,42 @@
     "        # Compute the 10-m wind speed based on the U10 and V10 variables:\n",
     "        met_df['WSPD'] = (np.sqrt(np.square(met_df['U10']) + np.square(met_df['V10']))).round(2)\n",
     "        \n",
-    "        # Merge the population data in based on common FIPS values:\n",
+    "        # Merge the population data into the meteorology dataframe based on common FIPS values:\n",
     "        met_df = met_df.merge(pop_df, on=['FIPS'])\n",
     "        \n",
-    "        # Make a list of all of the states\n",
-    "        states = met_df['State'].unique()\n",
+    "        # Population-weight the meteorological variables:\n",
+    "        met_df['T2_Weighted'] = (met_df['T2'].mul(met_df['Population_Fraction']))\n",
+    "        met_df['Q2_Weighted'] = (met_df['Q2'].mul(met_df['Population_Fraction']))\n",
+    "        met_df['SWDOWN_Weighted'] = (met_df['SWDOWN'].mul(met_df['Population_Fraction']))\n",
+    "        met_df['GLW_Weighted'] = (met_df['GLW'].mul(met_df['Population_Fraction']))\n",
+    "        met_df['WSPD_Weighted'] = (met_df['WSPD'].mul(met_df['Population_Fraction']))\n",
     "        \n",
-    "        # Loop over the states and calculate mean meteorology for each state:\n",
-    "        for i in range(len(states)):\n",
-    "            # Iterate the counter by one:\n",
-    "            counter = counter + 1\n",
+    "        # Sum up the population-weighted meteorological variables by state:\n",
+    "        met_df['T2_Sum'] = (met_df.groupby('State')['T2_Weighted'].transform('sum')).round(2)\n",
+    "        met_df['Q2_Sum'] = (met_df.groupby('State')['Q2_Weighted'].transform('sum')).round(5)\n",
+    "        met_df['SWDOWN_Sum'] = (met_df.groupby('State')['SWDOWN_Weighted'].transform('sum')).round(2)\n",
+    "        met_df['GLW_Sum'] = (met_df.groupby('State')['GLW_Weighted'].transform('sum')).round(2)\n",
+    "        met_df['WSPD_Sum'] = (met_df.groupby('State')['WSPD_Weighted'].transform('sum')).round(2)\n",
+    "        \n",
+    "        # Copy the output to a new dataframe and remove the non-unique rows:\n",
+    "        temp_df = met_df[['State', 'T2_Sum', 'Q2_Sum', 'SWDOWN_Sum', 'GLW_Sum', 'WSPD_Sum']].copy().drop_duplicates() \n",
+    "        \n",
+    "        # Add in the time variable:\n",
+    "        temp_df['Time_UTC'] = pd.to_datetime(filetime, exact=False, format='%Y_%m_%d_%H')\n",
+    "        \n",
+    "        # Rename the variables for consistency and reorder them:\n",
+    "        temp_df.rename(columns={'T2_Sum': 'T2', 'Q2_Sum': 'Q2', 'SWDOWN_Sum': 'SWDOWN', 'GLW_Sum': 'GLW', 'WSPD_Sum': 'WSPD'}, inplace=True)\n",
+    "        temp_df = temp_df[['Time_UTC', 'State', 'T2', 'Q2', 'SWDOWN', 'GLW', 'WSPD']].copy()\n",
+    "        \n",
+    "        # Aggregate the output into a new dataframe:\n",
+    "        if file == 0:\n",
+    "            output_df = temp_df\n",
+    "        else:\n",
+    "            output_df = pd.concat([output_df, temp_df])\n",
     "            \n",
-    "            # Subset to just the data for the state being processed:\n",
-    "            subset_df = met_df[met_df['State'].isin([states[i]])].copy()\n",
-    "          \n",
-    "            # Compute the population-weighted means and add the result to the output dataframe:\n",
-    "            output_df.loc[counter, 'Time_UTC'] = pd.to_datetime(file_time, exact=False, format='%Y_%m_%d_%H')\n",
-    "            output_df.loc[counter, 'State'] = states[i]\n",
-    "            output_df.loc[counter, 'T2'] = (subset_df['T2'].mul(subset_df['Population_Fraction'])).sum().round(2)\n",
-    "            output_df.loc[counter, 'Q2'] = (subset_df['Q2'].mul(subset_df['Population_Fraction'])).sum().round(5)\n",
-    "            output_df.loc[counter, 'SWDOWN'] = (subset_df['SWDOWN'].mul(subset_df['Population_Fraction'])).sum().round(2)\n",
-    "            output_df.loc[counter, 'GLW'] = (subset_df['GLW'].mul(subset_df['Population_Fraction'])).sum().round(2)\n",
-    "            output_df.loc[counter, 'WSPD'] = (subset_df['WSPD'].mul(subset_df['Population_Fraction'])).sum().round(2)\n",
-    "            \n",
-    "            # Clear up the variables and move to the next step in the loop:\n",
-    "            del subset_df\n",
-    "            \n",
-    "        # Clean up the variables and move to the next step in the loop:\n",
-    "        del filename, file_time, met_df, states, i\n",
-    "\n",
+    "        # Clean up the old dataframes and move to the next file in the loop:\n",
+    "        del filename, filetime, met_df, temp_df\n",
+    "        \n",
     "    # Sort by state and then time:\n",
     "    output_df = output_df.sort_values(['State', 'Time_UTC'])\n",
     "\n",
@@ -297,188 +300,19 @@
     "    # Write out the dataframe to a .csv file:\n",
     "    output_df.to_csv(csv_output_filename, sep=',', index=False)\n",
     "    \n",
-    "    return output_df\n",
-    "   "
+    "    return output_df\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": null,
    "id": "b38e6c6d-8983-4b44-8901-68b335b9c30f",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Time_UTC</th>\n",
-       "      <th>State</th>\n",
-       "      <th>T2</th>\n",
-       "      <th>Q2</th>\n",
-       "      <th>SWDOWN</th>\n",
-       "      <th>GLW</th>\n",
-       "      <th>WSPD</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1980-01-01 00:00:00</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>279.21</td>\n",
-       "      <td>0.00462</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>322.85</td>\n",
-       "      <td>2.38</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>49</th>\n",
-       "      <td>1980-01-01 01:00:00</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>278.99</td>\n",
-       "      <td>0.00462</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>322.51</td>\n",
-       "      <td>2.42</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>97</th>\n",
-       "      <td>1980-01-01 02:00:00</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>278.73</td>\n",
-       "      <td>0.00462</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>321.03</td>\n",
-       "      <td>2.71</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>145</th>\n",
-       "      <td>1980-01-01 03:00:00</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>278.42</td>\n",
-       "      <td>0.00460</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>317.73</td>\n",
-       "      <td>2.97</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>193</th>\n",
-       "      <td>1980-01-01 04:00:00</td>\n",
-       "      <td>Alabama</td>\n",
-       "      <td>278.04</td>\n",
-       "      <td>0.00458</td>\n",
-       "      <td>0.00</td>\n",
-       "      <td>310.53</td>\n",
-       "      <td>3.21</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>421440</th>\n",
-       "      <td>1980-12-31 19:00:00</td>\n",
-       "      <td>Wyoming</td>\n",
-       "      <td>277.89</td>\n",
-       "      <td>0.00453</td>\n",
-       "      <td>421.99</td>\n",
-       "      <td>247.31</td>\n",
-       "      <td>2.18</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>421488</th>\n",
-       "      <td>1980-12-31 20:00:00</td>\n",
-       "      <td>Wyoming</td>\n",
-       "      <td>278.31</td>\n",
-       "      <td>0.00463</td>\n",
-       "      <td>400.33</td>\n",
-       "      <td>249.72</td>\n",
-       "      <td>2.24</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>421536</th>\n",
-       "      <td>1980-12-31 21:00:00</td>\n",
-       "      <td>Wyoming</td>\n",
-       "      <td>278.40</td>\n",
-       "      <td>0.00468</td>\n",
-       "      <td>338.31</td>\n",
-       "      <td>250.69</td>\n",
-       "      <td>2.33</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>421584</th>\n",
-       "      <td>1980-12-31 22:00:00</td>\n",
-       "      <td>Wyoming</td>\n",
-       "      <td>277.95</td>\n",
-       "      <td>0.00464</td>\n",
-       "      <td>209.28</td>\n",
-       "      <td>251.26</td>\n",
-       "      <td>2.40</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>421632</th>\n",
-       "      <td>1980-12-31 23:00:00</td>\n",
-       "      <td>Wyoming</td>\n",
-       "      <td>276.76</td>\n",
-       "      <td>0.00446</td>\n",
-       "      <td>81.88</td>\n",
-       "      <td>250.13</td>\n",
-       "      <td>2.27</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>421632 rows × 7 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                  Time_UTC    State      T2       Q2  SWDOWN     GLW  WSPD\n",
-       "1      1980-01-01 00:00:00  Alabama  279.21  0.00462    0.00  322.85  2.38\n",
-       "49     1980-01-01 01:00:00  Alabama  278.99  0.00462    0.00  322.51  2.42\n",
-       "97     1980-01-01 02:00:00  Alabama  278.73  0.00462    0.00  321.03  2.71\n",
-       "145    1980-01-01 03:00:00  Alabama  278.42  0.00460    0.00  317.73  2.97\n",
-       "193    1980-01-01 04:00:00  Alabama  278.04  0.00458    0.00  310.53  3.21\n",
-       "...                    ...      ...     ...      ...     ...     ...   ...\n",
-       "421440 1980-12-31 19:00:00  Wyoming  277.89  0.00453  421.99  247.31  2.18\n",
-       "421488 1980-12-31 20:00:00  Wyoming  278.31  0.00463  400.33  249.72  2.24\n",
-       "421536 1980-12-31 21:00:00  Wyoming  278.40  0.00468  338.31  250.69  2.33\n",
-       "421584 1980-12-31 22:00:00  Wyoming  277.95  0.00464  209.28  251.26  2.40\n",
-       "421632 1980-12-31 23:00:00  Wyoming  276.76  0.00446   81.88  250.13  2.27\n",
-       "\n",
-       "[421632 rows x 7 columns]"
-      ]
-     },
-     "execution_count": 80,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "output_df = process_state_meteorology_time_series(data_input_dir = data_input_dir, \n",
     "                                                  data_output_dir = data_output_dir, \n",
-    "                                                  year = 2015)\n",
+    "                                                  year = 2017)\n",
     "\n",
     "output_df\n"
    ]
